--- a/index.html
+++ b/index.html
@@ -3,182 +3,128 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Superflix API</title>
+  <title>Filmes Online</title>
   <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
-    }
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px;
-      background-color: #111;
-    }
-    header h1 {
-      margin: 0;
-      color: #e50914;
-    }
-    .search {
-      padding: 5px 10px;
-      font-size: 16px;
-      border-radius: 4px;
-      border: none;
-    }
-    .row {
-      margin: 20px;
-    }
-    .row h2 {
-      margin: 10px 0;
-    }
-    .movies {
-      display: flex;
-      overflow-x: auto;
-      gap: 10px;
-      padding-bottom: 10px;
-    }
-    .movie {
-      min-width: 150px;
-      cursor: pointer;
-      position: relative;
-    }
-    .movie img {
-      width: 100%;
-      border-radius: 5px;
-      transition: transform 0.2s;
-    }
-    .movie:hover img {
-      transform: scale(1.05);
-    }
-    #player {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.95);
+    body { margin:0; background:#000; color:#fff; font-family:sans-serif; }
+    h1 { text-align:center; }
+    #search { width: 90%; margin: 10px auto; display: block; padding: 10px; font-size: 16px; }
+    .grid { display: flex; flex-wrap: wrap; justify-content: center; gap: 10px; padding: 10px; }
+    .item { width: 120px; cursor: pointer; text-align:center; }
+    .item img { width: 100%; border-radius: 8px; transition: transform 0.2s; }
+    .item img:hover { transform: scale(1.1); }
+
+    /* Player Tela Cheia */
+    #playerContainer {
       display: none;
-      flex-direction: column;
+      position: fixed;
+      top:0; left:0; right:0; bottom:0;
+      background: rgba(0,0,0,0.9);
+      z-index: 9999;
       justify-content: center;
       align-items: center;
-      z-index: 9999;
+      flex-direction: column;
     }
-    #player iframe {
+    #player {
       width: 90%;
       height: 80%;
       border: none;
     }
-    .player-buttons {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      display: flex;
-      gap: 10px;
-    }
-    .btn {
-      background: #e50914;
-      border: none;
+    #closeBtn {
+      background: red;
       color: white;
-      font-size: 20px;
-      border-radius: 5px;
-      padding: 5px 10px;
+      border: none;
+      padding: 10px 20px;
+      margin: 10px;
       cursor: pointer;
+      font-size: 18px;
+      border-radius: 5px;
     }
   </style>
 </head>
 <body>
 
-  <header>
-    <h1>Superflix API</h1>
-    <input type="text" id="search" class="search" placeholder="🔍 Pesquisar...">
-  </header>
+<h1>Filmes Online</h1>
+<input type="text" id="search" placeholder="Pesquisar...">
 
-  <div id="content"></div>
+<div class="grid" id="moviesGrid"></div>
 
-  <div id="player">
-    <div class="player-buttons">
-      <button id="closeBtn" class="btn">×</button>
-      <button id="fullBtn" class="btn">⛶</button>
-    </div>
-    <iframe id="iframe" sandbox="allow-scripts allow-same-origin"></iframe>
-  </div>
+<!-- Player em tela cheia -->
+<div id="playerContainer">
+  <button id="closeBtn">Fechar</button>
+  <iframe id="player" sandbox="allow-same-origin allow-scripts allow-presentation"></iframe>
+</div>
 
-  <script>
-    const apiKey = '818306944e112ccf75d496086ac6c42e';
-    const content = document.getElementById('content');
-    const searchInput = document.getElementById('search');
-    const player = document.getElementById('player');
-    const iframe = document.getElementById('iframe');
-    const closeBtn = document.getElementById('closeBtn');
-    const fullBtn = document.getElementById('fullBtn');
+<script>
+  const grid = document.getElementById('moviesGrid');
+  const iframe = document.getElementById('player');
+  const playerContainer = document.getElementById('playerContainer');
+  const closeBtn = document.getElementById('closeBtn');
+  const search = document.getElementById('search');
 
-    closeBtn.addEventListener('click', () => {
-      player.style.display = 'none';
-      iframe.src = ''; // para parar o vídeo
-    });
+  let allMovies = [];
+  let idsList = [];
+  let currentIndex = 0;
+  let loading = false;
 
-    // Fullscreen
-    fullBtn.addEventListener('click', () => {
-      if (iframe.requestFullscreen) {
-        iframe.requestFullscreen();
-      } else if (iframe.webkitRequestFullscreen) {
-        iframe.webkitRequestFullscreen();
-      } else if (iframe.msRequestFullscreen) {
-        iframe.msRequestFullscreen();
-      }
-    });
+  async function loadIds() {
+    const res = await fetch('https://superflixapi.nexus/filmes/lista/');
+    const text = await res.text();
+    idsList = [...new Set(text.match(/tt\d{7,8}/g))];
+    loadBatch(); // começa a carregar
+    setInterval(loadBatch, 1000); // carrega mais 100 a cada 1 segundo
+  }
 
-    async function getMovies(url, title) {
-      const res = await fetch(url);
-      const data = await res.json();
-      showRow(data.results, title);
+  async function loadBatch() {
+    if (loading) return;
+    loading = true;
+    const batch = idsList.slice(currentIndex, currentIndex + 100);
+    currentIndex += 100;
+    for (let imdbID of batch) {
+      try {
+        const res = await fetch(`https://api.themoviedb.org/3/find/${imdbID}?api_key=818306944e112ccf75d496086ac6c42e&external_source=imdb_id`);
+        const data = await res.json();
+        const movie = data.movie_results[0] || data.tv_results[0];
+        if (movie) {
+          const img = movie.poster_path ? `https://image.tmdb.org/t/p/w200${movie.poster_path}` : '';
+          const title = movie.title || movie.name;
+          allMovies.push({ id: imdbID, title, img });
+          addMovie(imdbID, title, img);
+        }
+      } catch (e) { console.error(e); }
     }
+    loading = false;
+  }
 
-    function showRow(movies, title) {
-      const row = document.createElement('div');
-      row.className = 'row';
-      row.innerHTML = `<h2>${title}</h2><div class="movies"></div>`;
-      const moviesDiv = row.querySelector('.movies');
+  function addMovie(imdbID, title, img) {
+    const div = document.createElement('div');
+    div.className = 'item';
+    div.innerHTML = `<img src="${img}" alt=""><p>${title}</p>`;
+    div.onclick = () => play(imdbID);
+    grid.appendChild(div);
+  }
 
-      movies.forEach(movie => {
-        const div = document.createElement('div');
-        div.className = 'movie';
-        div.innerHTML = `<img src="https://image.tmdb.org/t/p/w300${movie.poster_path}" alt="${movie.title}">`;
-        div.addEventListener('click', () => {
-          // usa imdb_id se tiver ou movie.id
-          fetch(`https://api.themoviedb.org/3/movie/${movie.id}/external_ids?api_key=${apiKey}`)
-            .then(res => res.json())
-            .then(ids => {
-              const imdb = ids.imdb_id;
-              if (imdb) {
-                iframe.src = `https://superflixapi.nexus/filme/${imdb}`;
-                player.style.display = 'flex';
-              } else {
-                alert('ID IMDb não encontrado!');
-              }
-            });
-        });
-        moviesDiv.appendChild(div);
-      });
+  function play(imdbID) {
+    iframe.src = `https://superflixapi.nexus/filme/${imdbID}`;
+    playerContainer.style.display = 'flex';
+  }
 
-      content.appendChild(row);
-    }
+  closeBtn.onclick = () => {
+    iframe.src = ''; // parar filme
+    playerContainer.style.display = 'none';
+  }
 
-    // Carregar categorias
-    getMovies(`https://api.themoviedb.org/3/trending/movie/week?api_key=${apiKey}`, 'Populares');
-    getMovies(`https://api.themoviedb.org/3/discover/movie?api_key=${apiKey}&with_genres=28`, 'Ação');
-    getMovies(`https://api.themoviedb.org/3/discover/movie?api_key=${apiKey}&with_genres=35`, 'Comédia');
-    getMovies(`https://api.themoviedb.org/3/discover/movie?api_key=${apiKey}&with_genres=27`, 'Terror');
-    getMovies(`https://api.themoviedb.org/3/discover/movie?api_key=${apiKey}&with_genres=10749`, 'Romance');
-
-    // Pesquisar
-    searchInput.addEventListener('keypress', (e) => {
-      if (e.key === 'Enter') {
-        content.innerHTML = ''; 
-        getMovies(`https://api.themoviedb.org/3/search/movie?api_key=${apiKey}&query=${searchInput.value}`, `Resultados para "${searchInput.value}"`);
+  search.addEventListener('input', () => {
+    grid.innerHTML = '';
+    const term = search.value.toLowerCase();
+    for (let movie of allMovies) {
+      if (movie.title.toLowerCase().includes(term)) {
+        addMovie(movie.id, movie.title, movie.img);
       }
-    });
-  </script>
+    }
+  });
+
+  loadIds();
+</script>
+
 </body>
-  </html>
+</html>
